--- a/src/cards.css
+++ b/src/cards.css
@@ -10,6 +10,8 @@ html {
 
 .card {
     /* display, flex-direction */
+    display: flex;
+    flex-direction: column;
     border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
@@ -17,6 +19,10 @@ html {
 
 .card__description {
     /* display, flex-direction, justify-content, align-items */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 15px 0;
 }
 
@@ -40,8 +46,9 @@ html {
 }
 
 .cardGroup {
-    /* display */
-  
+    display: flex;
+    max-width: 710px;
+    margin: 0 auto;
     border: 1px solid #CAD0D2;
     border-radius: 4px;
     overflow: hidden;
@@ -49,7 +56,10 @@ html {
   
     .cardGroup__card {
       /* flex-grow, flex-shrink, flex-basis */
-  
+
+      flex-grow: 1;
+      flex-shrink: 1;
+      flex-basis: 0;
       border: none;
       border-radius: 0;
     }
@@ -60,4 +70,15 @@ html {
   
     .cardGroup__cardDescription {
       /* flex-grow, flex-shrink, flex-basis */
+
+      flex-grow: 1;
+      flex-shrink:1 ;
+      flex-basis: 0;
     }
+
+    @media (min-width: 320px) and (max-width: 768px)
+{
+    .cardGroup{
+          max-width: 320px;
+   }
+}
